force-app/main/default/objects/redwing__LMS_Permission_Rule__c/redwing__LMS_Permission_Rule__c.object-meta.xml
<CustomObject>
    <label>LMS Permission Rule</label>
    <nameField>
        <label>LMS Permission Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LMS Permission Rules</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>