force-app/main/default/objects/redwing__LMS_Permission_Rule__c/fields/redwing__Description__c.field-meta.xml
<CustomField>
    <fullName>redwing__Description__c</fullName>
    <inlineHelpText>Optional description about this rule</inlineHelpText>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>