force-app/main/default/objects/redwing__LMS_Permission_Rule__c/fields/redwing__Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>redwing__Field_API_Name__c</fullName>
    <description>User field API name</description>
    <externalId>true</externalId>
    <inlineHelpText>User object field API name</inlineHelpText>
    <label>Field API Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>