force-app/main/default/objects/redwing__LMS_Permission_Rule__c/fields/redwing__Field_Value__c.field-meta.xml
<CustomField>
    <fullName>redwing__Field_Value__c</fullName>
    <description>User object field expected value.</description>
    <inlineHelpText>User object field expected value. If using a regex you can test it at https://regex101.com/</inlineHelpText>
    <label>Field Value</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>