force-app/main/default/objects/redwing__LMS_Permission_Rule__c/fields/redwing__IsActive__c.field-meta.xml
<CustomField>
    <fullName>redwing__IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable/disable the execution of this rule.</description>
    <inlineHelpText>Enable/disable the execution of this rule.</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>