force-app/main/default/objects/redwing__LMS_Permission_Rule__c/fields/redwing__Operator__c.field-meta.xml
<CustomField>
    <fullName>redwing__Operator__c</fullName>
    <inlineHelpText>Operator used in this rule. IN and NOT IN expect a list of comma separated values</inlineHelpText>
    <label>Operator</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>equals</fullName>
            </value>
            <value>
                <fullName>contains</fullName>
            </value>
            <value>
                <fullName>starts with</fullName>
            </value>
            <value>
                <fullName>ends with</fullName>
            </value>
            <value>
                <fullName>in</fullName>
            </value>
            <value>
                <fullName>not in</fullName>
            </value>
            <value>
                <fullName>regex</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>