force-app/main/default/objects/redwing__LMS_Permission_Rule__c/listViews/redwing__All.listView-meta.xml
<ListView>
    <fullName>redwing__All</fullName>
    <columns>NAME</columns>
    <columns>redwing__Field_API_Name__c</columns>
    <columns>redwing__Operator__c</columns>
    <columns>redwing__Field_Value__c</columns>
    <columns>redwing__IsActive__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>